--- a/Untitled12.ipynb
+++ b/Untitled12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzYAgdRwFWyu9fE9vpCvx6",
+      "authorship_tag": "ABX9TyNxD8HqAJ/1ZHxXu50/K3vc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +28,117 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "pHNPw3UUqU0P"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pHNPw3UUqU0P",
+        "outputId": "b9f2bf3c-b1a1-4ca5-8f10-f5557823ad44"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement genism (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for genism\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install genism\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "import genism\n",
         "from genism import corpora\n",
-        "documents=[['apple','banana']]"
+        "documents=[['apple','banana','fruits'],['bought','bicycle','recently','two','years','buy','bikes'],['colour','apple','bicycle','red']]\n",
+        "mapping=corpora.dictionary(documents)\n",
+        "data=[mapping.doc2bow(word) for word in documents]\n",
+        "ldamodel = gensim.models.ldamodel.LdaModel(data, num_topics=2,id2word=mapping, passes=15)\n",
+        "topics = ldamodel.show_topics()\n",
+        "print(topics)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 401
+        },
+        "id": "PY-oNG4Av5yn",
+        "outputId": "214b2581-4e64-4264-ccae-af1af4480c82"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'genism'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-5853a0887e8d>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgenism\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgenism\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcorpora\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdocuments\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'apple'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'banana'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'fruits'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'bought'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'bicycle'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'recently'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'two'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'years'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'buy'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'bikes'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'colour'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'apple'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'bicycle'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'red'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmapping\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcorpora\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdictionary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdocuments\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmapping\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdoc2bow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdocuments\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'genism'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install gensim\n",
+        "\n",
+        "import gensim\n",
+        "from gensim import corpora\n",
+        "\n",
+        "documents = [['apple', 'banana', 'fruits'],\n",
+        "            ['bought', 'bicycle', 'recently', 'two', 'years', 'buy', 'bikes'],\n",
+        "            ['colour', 'apple', 'bicycle', 'red']]\n",
+        "\n",
+        "mapping = corpora.Dictionary(documents)\n",
+        "data = [mapping.doc2bow(word) for word in documents]\n",
+        "\n",
+        "ldamodel = gensim.models.ldamodel.LdaModel(data, num_topics=2, id2word=mapping, passes=15)\n",
+        "topics = ldamodel.show_topics()\n",
+        "\n",
+        "print(topics)\n",
+        "print(ldamodel.get_document_topics(data[0]))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eDkiBmfWwD_G",
+        "outputId": "7ab0bd42-2246-44a3-a096-724cc0ae592a"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: gensim in /usr/local/lib/python3.10/dist-packages (4.3.2)\n",
+            "Requirement already satisfied: numpy>=1.18.5 in /usr/local/lib/python3.10/dist-packages (from gensim) (1.25.2)\n",
+            "Requirement already satisfied: scipy>=1.7.0 in /usr/local/lib/python3.10/dist-packages (from gensim) (1.11.4)\n",
+            "Requirement already satisfied: smart-open>=1.8.1 in /usr/local/lib/python3.10/dist-packages (from gensim) (6.4.0)\n",
+            "[(0, '0.117*\"bicycle\" + 0.115*\"bought\" + 0.115*\"two\" + 0.115*\"recently\" + 0.115*\"years\" + 0.115*\"bikes\" + 0.115*\"buy\" + 0.039*\"apple\" + 0.039*\"colour\" + 0.039*\"red\"'), (1, '0.192*\"apple\" + 0.115*\"banana\" + 0.115*\"fruits\" + 0.115*\"red\" + 0.115*\"colour\" + 0.114*\"bicycle\" + 0.039*\"buy\" + 0.039*\"bikes\" + 0.039*\"years\" + 0.039*\"recently\"')]\n",
+            "[(0, 0.12948667), (1, 0.8705133)]\n"
+          ]
+        }
       ]
     }
   ]
